Fix header centering on smaller screens

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -140,7 +140,7 @@ header {
 
 .site-title {
     align-self: center;
-    margin-left: 20px;
+    margin-left: 1rem;
     font-family: "League Spartan Variable";
     font-variation-settings: "wght" 345;
 }
@@ -350,6 +350,7 @@ hr {
     /*Responsive Header*/
     .site-title {
         text-align: center;
+        margin: 0;
     }
 
     .site-title > h1 {
